--- a/website/templates/pendu/index.html
+++ b/website/templates/pendu/index.html
@@ -18,9 +18,22 @@
 
     <div>
         {% if userLetter %}
-            <h3>{{ userLetter }}</h3>
+            <h3>user letter : {{ userLetter }}</h3>
+            lettre deviné : {{ user_letter_guessed }}
         {% endif %}
-        <h1>{{ letter_state }}</h1>
+
+        {% for letter_index in index %}
+                {{ letter_index }}
+        <{% endfor %}
+
+        {% if letter_state %}
+            <h3 class="text-success">la lettre est dans le mot</h3>
+            index :
+
+        {% else %}
+            <h3 class="text-danger">la lettre n'est pas dans le mot</h3>
+        {% endif %}
+
     </div>
 
 {% endblock %}
