cemantix : logique de base + template de base

--- a/website/templates/pendu/index.html
+++ b/website/templates/pendu/index.html
@@ -4,7 +4,7 @@
 
     <a class="btn btn-warning" href="{% url "pendu_reset" %}">reset</a>
 <h2>jeu du pendu</h2>
-    <h6>mot a deviner: {{ guess_word }}</h6>
+{#    <h6>mot a deviner: {{ guess_word }}</h6>#}
     lettres :
     {% for letter in word_letters %}
         {{ letter }},
