--- a/website/templates/website/navbar.html
+++ b/website/templates/website/navbar.html
@@ -9,6 +9,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'pendu' %}">Pendu</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'cemantix' %}">Cemantix</a>
+        </li>
       </ul>
 
     </div>
